src/main/java/org/example/breakoutdrop/Errors/ClientHTTP/Unauthorized401.java
package org.example.breakoutdrop.Errors.ClientHTTP;

public class Unauthorized401 extends RuntimeException {
    public Unauthorized401(String message) {
        super(message);
    }
}
